--- a/main.css
+++ b/main.css
@@ -28,26 +28,57 @@ fieldset {
     top: 0%;
 }
 
-#lock-pane-input {
-
+#lock-pane h2 {
+    text-align: center;
 }
 
-#lock-pane table {
-    padding: 4rem;
-    height: 90%;
+#lock-pane-display {
+    text-align: center;
+    font-size: 400%;
+}
+
+x-keypad {
     width: 100%;
+    height: 100%;
+    max-width: 75em;
     margin-left: auto;
     margin-right: auto;
+
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    align-items: center;
+    flex-direction: column;
 }
 
-#lock-pane table tr {
-    height: 25%;
-    width: 33.333%;
-}
-
-#lock-pane table tr td button {
-    height: 100%;
+x-keypad section {
+    display: flex;
+    flex-direction: row;
     width: 100%;
+    height: 100%;
+}
+
+x-keypad section a {
+    display: flex;
+    flex: 1 0 auto;
+    flex-direction: column;
+    justify-content: center;
+    width: 30%;
+
+    text-decoration: none;
+    color: black;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+x-keypad section a:active {
+    background-color: #b2f2ff;
+    color: #fff;
+}
+
+
+x-keypad section a div:first-child {
+    font-size: 2em;
 }
 
 #pane-add-password {
@@ -56,4 +87,8 @@ fieldset {
 
 #toolbar {
     bottom: -4rem;
+}
+
+#lock-pane-input {
+    height: calc(100% - 14rem);
 }
