--- a/partials/passwordPane.html
+++ b/partials/passwordPane.html
@@ -1,5 +1,5 @@
-<pane id="passwordPane" ng-controller="PasswordController">
-    <div class="title">Carbon Fox</div>
+<div id="title">Carbon Fox</div>
+<section id="passwordPane" ng-controller="PasswordController">
     <ul id='entry-list'>
         <li ng-repeat="(key, value) in entries" ng-click="show(value)" ng-right-click="edit(value)">
             <div>
@@ -12,15 +12,4 @@
         </li>
     </ul>
     <a id="add-button" class="round-button fa fa-plus" ng-click="add()"></a>
-</pane>
-
-<pane id="add-password-pane" ng-class="['top-pane', hidden? 'hidden' : '']" ng-controller="AddPasswordController">
-    <div class="title">Password</div>
-    <input type="text" ng-model="domain" placeholder="(website)">
-    <input type="text" ng-model="username" placeholder="(username)">
-    <input type="text" ng-model="password" placeholder="(password)">
-    <button ng-click="generate()">Generate</button>
-    <button ng-click="cancel()">Cancel</button>
-    <button class="danger" ng-click="delete()" ng-if="editingEntry !== null">Delete</button>
-    <button class="recommend" ng-click="save()">Save</button>
-</pane>
+</section>
