--- a/style/main.css
+++ b/style/main.css
@@ -27,7 +27,7 @@ p.micro {
     font-size: 1.3rem;
 }
 
-.title {
+#title {
     display: flex;
     background-color: #eee;
     justify-content: center;
@@ -35,7 +35,9 @@ p.micro {
     height: 38px;
     box-shadow: 0px 0px 2px black;
 
-    position: sticky;
+    position: fixed;
+    left: 0px;
+    right: 0px;
     top: 0px;
     z-index: 100;
 }
@@ -64,6 +66,7 @@ p.micro {
 
 input, button {
     border-radius: 2px;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     width: 100%;
     height: 4rem;
@@ -126,4 +129,13 @@ body .round-button {
         margin-left: auto;
         margin-right: auto;
     }
+}
+
+#view > section {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    padding-top: 38px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
 }
