--- a/partials/passwordPane.html
+++ b/partials/passwordPane.html
@@ -1,13 +1,20 @@
 <div id="title">Carbon Fox</div>
 <section id="passwordPane" ng-controller="PasswordController">
-    <ul id='entry-list'>
-        <li ng-repeat="(key, value) in entries" ng-click="show(value)" ng-right-click="edit(value)">
+    <div id="search-bar">
+        <ul>
+            <li ng-repeat="l in 'abcdefghijklmnopqrstuvwxyz#'">
+                {{l}}
+            </li>
+        </ul>
+    </div>
+    <ul id='entry-list' ng-style="hidden? {visibility: 'hidden'} : {}">
+        <li ng-repeat="entry in entries" ng-click="show(entry)" ng-right-click="edit(entry)">
             <div>
                 <div>
-                    <div>{{value.isLocked()? value.domain : value.password}}</div>
-                    <div>{{value.isLocked()? value.username : ''}}</div>
+                    <div>{{entry.isLocked()? entry.domain : entry.password}}</div>
+                    <div>{{entry.isLocked()? entry.username : ''}}</div>
                 </div>
-                <div ng-class="['lock-icon', 'fa', value.isLocked()? 'fa-lock' : 'fa-unlock']"></div>
+                <div ng-class="['lock-icon', 'fa', entry.isLocked()? 'fa-lock' : 'fa-unlock']"></div>
             </div>
         </li>
     </ul>
