--- a/style/keypad.css
+++ b/style/keypad.css
@@ -11,7 +11,7 @@
     margin-left: auto;
     margin-right: auto;
 
-    background-color: orange;
+    background-color: rgba(128, 128, 100, 0.5);
     box-shadow: 0px 0px 2px;
 
     display: flex;
@@ -30,7 +30,7 @@
     width: 100%;
     height: 100%;
 
-    border-bottom: 1px inset orange;
+    border-bottom: 1px inset rgba(128, 128, 100, 0.5);
 }
 
 #keypad section a {
@@ -69,6 +69,8 @@
     text-align: center;
     padding: 0px;
     font-size: 2em;
+    background-color: white;
+    color: black;
 
     display: flex;
     justify-content: center;
