--- a/style/main.css
+++ b/style/main.css
@@ -1,9 +1,17 @@
 html {
     font-size: 10px;
+    height: 100%;
 }
 
 body {
     margin: 0px;
+    height: 100%;
+    background-image: url('/style/images/footer_lodyas/footer_lodyas.png');
+}
+
+#root-container {
+    color: lightgray;
+    height: 100%;
 }
 
 body, p, ul { font-size: 1.9rem; }
@@ -34,6 +42,7 @@ p.micro {
     align-items: center;
     height: 38px;
     box-shadow: 0px 0px 2px black;
+    color: black;
 
     position: fixed;
     left: 0px;
@@ -155,17 +164,6 @@ body .round-button {
     cursor: default;
 }
 
-/* Temporary hack */
-@media (min-width: 600px) {
-    html {
-        position: relative;
-        height: 480px;
-        width: 320px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-
 #view > section {
     min-height: 100%;
     width: 100%;
@@ -174,9 +172,6 @@ body .round-button {
     padding-top: 38px;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
-
-    background-image: url('/style/images/footer_lodyas/footer_lodyas.png');
-    color: lightgray;
 }
 
 .vspacer {
