--- a/style/desktop.css
+++ b/style/desktop.css
@@ -9,7 +9,7 @@
         flex: 0;
     }
 
-    #title { display: none ;}
+    /*#title { display: none ;}*/
 
     #welcome-pane {
         width: 800px;
