--- a/style/desktop.css
+++ b/style/desktop.css
@@ -23,7 +23,7 @@
         display: none !important;
     }
 
-    #view > #loginPane {
+    #view > #login-pane {
         position: relative;
         margin-left: auto;
         margin-right: auto;
