--- a/style/main.css
+++ b/style/main.css
@@ -40,7 +40,7 @@ p.micro {
     background-color: #eee;
     justify-content: center;
     align-items: center;
-    height: 38px;
+    height: 45px;
     box-shadow: 0px 0px 2px black;
     color: black;
 
@@ -169,7 +169,7 @@ body .round-button {
     width: 100%;
     position: absolute;
     padding: 0px;
-    padding-top: 38px;
+    padding-top: 45px;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
 }
@@ -195,26 +195,47 @@ body .round-button {
     flex-direction: column;
 }
 
-#settings-icon {
+#title > .title-button {
+    display: flex;
+    align-items: center;
     position: absolute;
     padding: 10px;
     top: 0px;
-    right: 0px;
-    padding-right: 20px;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
-    height: 38px;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+    height: 45px;
     background-color: lightgray;
-    transition: background-color 0.25s ease, padding-right 0.25s ease;
-
     cursor: pointer;
 }
 
-#settings-icon:active, #settings-icon.open {
-    background-color: white;
+#title > .title-button.right {
+    right: 0px;
+    padding-right: 10px;
+    padding-left: 10px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    transition: background-color 0.25s ease, padding-right 0.25s ease;
+}
+
+#title > .title-button.left {
+    left: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    transition: background-color 0.25s ease, padding-left 0.25s ease;
+}
+
+#title > .title-button.right:active, #title > .title-button.right.open {
     padding-right: 50px;
+}
+
+#title > .title-button.left:active, #title > .title-button.left.open {
+    padding-left: 50px;
+}
+
+#title > .title-button:active, #title > .title-button.open {
+    background-color: white;
 }
 
 #sidebar {
@@ -228,7 +249,7 @@ body .round-button {
     width: 200px;
     height: 100%;
     right: -205px;
-    top: 38px;
+    top: 45px;
     box-shadow: 0px 0px 2px black;
 
     transition: right 0.25s ease;
@@ -261,15 +282,4 @@ body .round-button {
     margin: 2rem;
     font-size: 2rem;
     width: 25px;
-}
-
-#cancel {
-    position: absolute;
-    height: 75px;
-    width: 30px;
-    background-color: white;
-    left: 0px;
-    padding-left: 10px;
-    border-right: 1px solid black;
-    cursor: pointer;
 }
