--- a/style/view.css
+++ b/style/view.css
@@ -30,8 +30,9 @@
 
 #entry-list > li > div {
     width: 100%;
+    height: 100%;
     display: flex;
-    align-items: center;
+    align-items: baseline;
     padding-left: 0px;
     margin-right: 1.5rem;
 }
