--- a/style/view.css
+++ b/style/view.css
@@ -24,10 +24,6 @@
     transition: background-color 0.2s ease, height 0.2s ease;
 }
 
-#entry-list > li.expanded {
-    height: 8rem;
-}
-
 #entry-list > li > div {
     width: 100%;
     height: 100%;
@@ -50,7 +46,7 @@
     box-shadow: 0px 0px 2px black;
 
     padding: 0px 5px 5px 5px;
-    border-radius: 0px 0px 10px 10px
+    border-radius: 0px 0px 10px 10px;
 
     display: flex;
     flex-direction: column;
