--- a/style/main.css
+++ b/style/main.css
@@ -53,19 +53,24 @@ p.micro {
 
 #floating-message {
     position: fixed;
-    bottom: 20px;
+    bottom: 0px;
     box-shadow: 0px 0px 2px black;
-    background-color: #0af;
+    background-image: linear-gradient(135deg, rgb(80,80,80) 0%,rgb(119,119,119) 50%,rgb(115,115,115) 51%,rgb(154,154,154) 100%);
+    color: #fff;
     padding: 10px;
-    border-radius: 25px;
     left: 0px;
     right: 0px;
-    width: 10em;
+    width: 100%;
+    height: 5rem;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
 
-    opacity: 0.95;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 1.0;
     transition: opacity 0.2s ease;
 }
 
@@ -278,4 +283,8 @@ body .round-button {
     margin: 2rem;
     font-size: 2rem;
     width: 25px;
+}
+
+#title .fa-check {
+    background-color: lightblue;
 }
